derive-ex-tests/tests/compile_fail/derive_default/many_default_attr.rs
use derive_ex::derive_ex;

#[derive_ex(Default)]
enum X {
    #[default]
    A,
    B,
    #[default]
    C,
}
fn main() {}
